--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <button onclick="myFunction1()">
                 <h3>Contact Info</h3>
             </button>  
-            <div id="dropdown-content1">
+            <div class="dropdown-content">
                 <ul>
                     <li>
                         <span>Address:</span>
@@ -36,7 +36,7 @@
             <button onclick="myFunction2()">
                 <h3>Education</h3>
             </button>
-            <div id="dropdown-content2">
+            <div class="dropdown-content">
                 <ul>
                     <li>
                         <h5>2006 - 2011</h5>
@@ -55,11 +55,11 @@
         </div>
     </div>
     <div class="grid-item" id="right">
-        <div style="font-size: 15px;">
-            <button onclick="myFunction3()" style="margin-bottom: 10px;">
-                <h3>Education</h3>
+        <div class="dropdown" style="font-size: 15px;">
+            <button onclick="myFunction3()">
+                <h3>About Me</h3>
             </button>
-            <div id="dropdown-content3">
+            <div class="dropdown-content" style="padding: 10px;">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium sodales orci, 
                 sed elementum nibh pulvinar et. Quisque aliquet erat in interdum pharetra. Praesent aliquet convallis lacinia. 
                 Mauris consequat egestas egestas. Donec nec dolor a libero tincidunt semper id id ante. 
@@ -72,11 +72,11 @@
             </div>
         </div>
         <img src="white.PNG" alt="white" style="width: 400px; height: 200px;">
-        <div>
-            <button onclick="myFunction4()" style="margin-bottom: 10px;">
+        <div class="dropdown">
+            <button onclick="myFunction4()">
                 <h3>Experience</h3>
             </button>
-            <div id="dropdown-content4">
+            <div class="dropdown-content">
                 <div class="experience">
                     <div class="details">
                         <p>
@@ -108,12 +108,12 @@
                 </div>
             </div>
         </div>
-        <img src="white.PNG" alt="white" style="width: 470px; height: 300px;">
-        <div>
-            <button onclick="myFunction5()" style="margin-bottom: 10px;">
+        <img src="white.PNG" alt="white" style="width: 470px; height: 330px;">
+        <div class="dropdown">
+            <button onclick="myFunction5()">
                 <h3>Professional Skills</h3>
             </button>
-            <div id="dropdown-content5">
+            <div class="dropdown-content">
                 <div class="skills">
                     <div class="mastery">
                         <p>
